--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,30 @@
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+name: "Sciencia"
+title: "Sciencia"
+description: ""
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /sciencia
 google_analytics: 'UA-xxxxxxxx-1'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+disqus: 'sciencia-1'
 include: ["_pages"]
 permalink: /:title/
-email: wowthemesnet@gmail.com
+email: sciencia2020@hotmail.com
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  upsal:
+    name: Upsal Nanayakkara
+    display_name: Upsal
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    email : sciencia2020@hotmail.com
+    web: https://www.facebook.com/qazwsx123456789gg
   john:
     name: John
     display_name: John    
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
+    email: sciencia2020@hotmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
     description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
