--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: ""
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /sciencia
-google_analytics: 'UA-xxxxxxxx-1'
+google_analytics: 'UA-9456844-6'
 disqus: 'sciencia-1'
 include: ["_pages"]
 permalink: /:title/
