--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ authors:
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email : sciencia2020@hotmail.com
     web: https://www.facebook.com/qazwsx123456789gg
+  adeesha:
+    name: Adeesha Jayanath
+    display_name: Adeesha
+    gravatar: e56154546cf4be74e393c62d1ae9f9d
+    email: sciencia2020@hotmail.com
+    web: https://www.facebook.com/adeeshajayanath.premadasa/
   john:
     name: John
     display_name: John    
