1.Adding avatar image for Upsal 2.Adding more line breaks to the latest post

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ authors:
   upsal:
     name: Upsal Nanayakkara
     display_name: Upsal
+    avatar: 'assets/images/avatar/upsal.jpg'
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email : sciencia2020@hotmail.com
     web: https://www.facebook.com/qazwsx123456789gg
