Added avatar for adeesha

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ authors:
   adeesha:
     name: Adeesha Jayanath
     display_name: Adeesha
+    avatar: 'assets/images/avatar/adeesha.jpg'
     gravatar: e56154546cf4be74e393c62d1ae9f9d
     email: sciencia2020@hotmail.com
     web: https://www.facebook.com/adeeshajayanath.premadasa/
